Bug 1408622: Dumb down the return value of Servo_SelectorList_Closest. r=me

MozReview-Commit-ID: 2KRWlVAzj0D